base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etherbank-client-deployment
  namespace: etherbank-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etherbank-frontend
  template:
    metadata:
      labels:
        app: etherbank-frontend
    spec:
      containers:    
        - image: seyio/etherbank-frontend:latest
          name: nginx-client
          ports:
            - containerPort: 80
