base/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: etherbank-dev
  name: etherbank-client-service
spec:
  ports: 
    - port: 80
      targetPort: 80
  selector:
    app: etherbank-frontend
